--- a/src/map/geocoder/geocoder.css
+++ b/src/map/geocoder/geocoder.css
@@ -62,7 +62,11 @@
   min-width: 29px;
   transition: width 0.25s, min-width 0.25s;
 }
-
+/* Güvenli Bölge Butonlar takipon */
+.mapboxgl-ctrl-group button{
+  min-height: 60px;
+  min-width: 60px;
+}
 /* Suggestions */
 .maplibregl-ctrl-geocoder .suggestions {
   background-color: #fff;
@@ -77,10 +81,14 @@
   top: calc(100% + 6px);
   z-index: 1000;
   overflow: hidden;
-  font-size: 13px;
+  font-size: 16px;
 }
+/*Güvenli Bölge Butonları takipon */
+.maplibregl-ctrl-bottom-left .suggestions{
+  width:60px;
+  height:60px;
 
-.maplibregl-ctrl-bottom-left .suggestions,
+}
 .maplibregl-ctrl-bottom-right .suggestions {
   top: auto;
   bottom: 100%;
@@ -108,11 +116,11 @@
 }
 
 .maplibre-ctrl-geocoder--suggestion-icon {
-  min-width: 30px;
-  min-height: 24px;
-  max-width: 30px;
-  max-height: 24px;
-  padding-right: 12px;
+  min-width: 60px;
+  min-height: 28px;
+  max-width: 60px;
+  max-height: 28px;
+  padding-right: 14px;
 }
 
 .maplibregl-ctrl-geocoder--suggestion-info {
